tests/snapshots/plot_images__grid_plots_emit_images_and_updates@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) r_repl
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:<grid_plot>]
=== reference grid_plot via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   grDevices::png(filename = Sys.getenv("MCP_REPL_TEST_PNG_DEST"), width = 800, height = 600, res = 96)
===   grid::grid.newpage()
===   grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
===   invisible(grDevices::dev.off())

2) r_repl
>>> grid::grid.lines(x = c(0.1, 0.9), y = c(0.9, 0.1))
<<< [repl] image update from previous request shown as a new image
<<<
<<< [image/png blake3:<grid_plot_update>]
=== reference grid_plot_update via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   grDevices::png(filename = Sys.getenv("MCP_REPL_TEST_PNG_DEST"), width = 800, height = 600, res = 96)
===   grid::grid.newpage()
===   grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
===   grid::grid.lines(x = c(0.1, 0.9), y = c(0.9, 0.1))
===   invisible(grDevices::dev.off())

3) r_repl
>>> 1+1
<<< [1] 2
