tests/snapshots/plot_images__grid_plots_emit_stable_images_for_repeats.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:<grid_plot>",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      },
      "reference": {
        "name": "grid_plot",
        "command": "Rscript --vanilla -",
        "envVar": "MCP_REPL_TEST_PNG_DEST",
        "script": [
          "grDevices::png(filename = Sys.getenv(\"MCP_REPL_TEST_PNG_DEST\"), width = 800, height = 600, res = 96)",
          "grid::grid.newpage()",
          "grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
          "grDevices::dev.off()"
        ]
      }
    },
    {
      "tool": "r_repl",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:<grid_plot>",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      },
      "reference": {
        "name": "grid_plot",
        "command": "Rscript --vanilla -",
        "envVar": "MCP_REPL_TEST_PNG_DEST",
        "script": [
          "grDevices::png(filename = Sys.getenv(\"MCP_REPL_TEST_PNG_DEST\"), width = 800, height = 600, res = 96)",
          "grid::grid.newpage()",
          "grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
          "grDevices::dev.off()"
        ]
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n> "
          }
        ],
        "isError": false
      }
    }
  ]
}
