tests/snapshots/plot_images__grid_plots_emit_stable_images_for_repeats@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) r_repl
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:<grid_plot>]
=== reference grid_plot via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   dest <- Sys.getenv("MCP_REPL_TEST_PNG_DEST")
===   stopifnot(nzchar(dest))
===   grDevices::png(filename = dest, width = 800, height = 600, res = 96)
===   grid::grid.newpage()
===   grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
===   grDevices::dev.off()

2) r_repl
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:<grid_plot>]
=== reference grid_plot via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   dest <- Sys.getenv("MCP_REPL_TEST_PNG_DEST")
===   stopifnot(nzchar(dest))
===   grDevices::png(filename = dest, width = 800, height = 600, res = 96)
===   grid::grid.newpage()
===   grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
===   grDevices::dev.off()

3) r_repl
>>> 1+1
<<< [1] 2
<<<
