tests/snapshots/plot_images__multi_panel_plots_emit_single_image@macos.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "par(mfrow = c(2, 1)); plot(1:10); plot(10:1)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:<multi_panel_plot>",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      },
      "reference": {
        "name": "multi_panel_plot",
        "command": "Rscript --vanilla -",
        "envVar": "MCP_REPL_TEST_PNG_DEST",
        "script": [
          "grDevices::png(filename = Sys.getenv(\"MCP_REPL_TEST_PNG_DEST\"), width = 800, height = 600, res = 96)",
          "par(mfrow = c(2, 1))",
          "plot(1:10)",
          "plot(10:1)",
          "grDevices::dev.off()"
        ]
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n> "
          }
        ],
        "isError": false
      }
    }
  ]
}
