tests/snapshots/plot_images__multi_panel_plots_emit_single_image@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) r_repl
>>> par(mfrow = c(2, 1)); plot(1:10); plot(10:1)
<<< [image/png 800x600]

2) r_repl
>>> 1+1
<<< [1] 2
<<<
