tests/snapshots/plot_images__plots_emit_images_and_updates@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) r_repl
>>> plot(1:10)
<<< [image/png blake3:<base_plot>]
=== reference base_plot via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   grDevices::png(filename = Sys.getenv("MCP_REPL_TEST_PNG_DEST"), width = 800, height = 600, res = 96)
===   plot(1:10)
===   grDevices::dev.off()

2) r_repl
>>> lines(4:8, 4:8)
<<< [repl] image update from previous request shown as a new image
<<<
<<< [image/png blake3:<base_plot_update>]
=== reference base_plot_update via Rscript --vanilla -
=== env MCP_REPL_TEST_PNG_DEST=<REFERENCE_PNG>
=== script
===   grDevices::png(filename = Sys.getenv("MCP_REPL_TEST_PNG_DEST"), width = 800, height = 600, res = 96)
===   plot(1:10)
===   lines(4:8, 4:8)
===   grDevices::dev.off()

3) r_repl
>>> 1+1
<<< [1] 2
